syntax = "proto3";
package v0;
option go_package = "v0";

message AccessProtocol {
    oneof Method {
        int32 AuthLevel = 1;
        string User = 2;
        string UserSet = 3;
    }
}